wordinfo/wordinfo.css
body {
    background-color: lightslategray;
}
* {
    font-size: 3vh;
    font-family: Arial, Helvetica, sans-serif;
}
.acknowledge {
    font-size: 2vh !important;
    font-style: italic;
}
input {
    margin-bottom: 1vh;
}
.info-div {
    font-size: larger;
}
table {
    border-collapse: collapse;
    box-shadow: 0 0 2vw rgba(0,0,0,0.15);
    font-family: sans-serif;
    margin-bottom: 1vh;
}
tr  {
    max-width: 90vw;
    border-bottom: 1px solid #dddddd;
}
tr td:nth-child(1) {
    max-width: 10vw;
    text-align: right;
}
tr td:nth-child(2) {
    padding-left: 1vw;
}
tr:nth-child(odd) {
    background-color: #f3f3f3;
}
tr:nth-child(even) {
    background-color: #009879;
}
tr:last-of-type {
    border-bottom: 2px solid #009879;
}
.word-display[invalid="true"] {
    background-color: red !important;
}

